Implement type-safe enums for status and method